--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,8 @@
 /* Add CSS Styling */
+
+div p {
+    background-color: rgb(207, 198, 60);
+    color: #ac1212;
+    font-size: 20px;
+    text-align: center;
+}
