Complete foundations/flex

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -22,11 +26,26 @@ body {
   height: 48px;
 }
 
+.group {
+  display: flex;
+  margin-right: auto;
+}
+
+span {
+  display: flex;
+  gap: 16px;
+}
+
 .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.links {
+  display: flex;
+  gap: 16px; 
 }
 
 button {
